exo: Use buffer format to determine if content is opaque.

Detect when buffer format implicitly makes content opaque. This reduces
the amount of overdraw significantly for clients that are not explicitly
setting opaque region. E.g. Xwayland.

BUG=687187
TEST=chrome --show-overdraw-feedback

Review-Url: https://codereview.chromium.org/2662973004
Cr-Commit-Position: refs/heads/master@{#447347}

Former-commit-id: ca132dc830935dbad8d554b76d7f0d30ab2fb063