components/exo/test/exo_test_helper.cc
@@ -61,12 +61,12 @@ ExoTestHelper::ExoTestHelper() {
 ExoTestHelper::~ExoTestHelper() {}
 
 std::unique_ptr<gfx::GpuMemoryBuffer> ExoTestHelper::CreateGpuMemoryBuffer(
-    const gfx::Size& size) {
+    const gfx::Size& size,
+    gfx::BufferFormat format) {
   return aura::Env::GetInstance()
       ->context_factory()
       ->GetGpuMemoryBufferManager()
-      ->CreateGpuMemoryBuffer(size, gfx::BufferFormat::RGBA_8888,
-                              gfx::BufferUsage::GPU_READ,
+      ->CreateGpuMemoryBuffer(size, format, gfx::BufferUsage::GPU_READ,
                               gpu::kNullSurfaceHandle);
 }
 
